infra/k8s/add-update-poi-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-update-poi-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add-update-poi
  template:
    metadata:
      labels:
        app: add-update-poi
    spec:
      containers:
        - name: add-update-poi
          image: <docker_username>/add-update-poi
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: add-update-poi-srv
spec:
  selector:
    app: add-update-poi
  ports:
    - name: db
      protocol: TCP
      port: 3000
      targetPort: 3000
