infra/k8s/declase-case-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: declare-case-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: declare-case
  template:
    metadata:
      labels:
        app: declare-case
    spec:
      containers:
        - name: declare-case
          image: <docker_username>/declare-case
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: declare-case-srv
spec:
  selector:
    app: declare-case
  ports:
    - name: db
      protocol: TCP
      port: 3000
      targetPort: 3000
