infra/k8s/login-register-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-register-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-register
  template:
    metadata:
      labels:
        app: login-register
    spec:
      containers:
        - name: login-register
          image: <docker_username>/login-register
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: login-register-srv
spec:
  selector:
    app: login-register
  ports:
    - name: db
      protocol: TCP
      port: 3000
      targetPort: 3000
