infra/k8s/poi-info-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-info-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi-info
  template:
    metadata:
      labels:
        app: poi-info
    spec:
      containers:
        - name: poi-info
          image: <docker_username>/poi-info
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: poi-info-srv
spec:
  selector:
    app: poi-info
  ports:
    - name: db
      protocol: TCP
      port: 3000
      targetPort: 3000
