infra/k8s/popular-times-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popular-times-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: popular-times
  template:
    metadata:
      labels:
        app: popular-times
    spec:
      containers:
        - name: popular-times
          image: <docker_username>/popular-times
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: popular-times-srv
spec:
  selector:
    app: popular-times
  ports:
    - name: db
      protocol: TCP
      port: 3000
      targetPort: 3000
