infra/k8s/visits-cases-stats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-cases-stats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-cases-stats
  template:
    metadata:
      labels:
        app: visits-cases-stats
    spec:
      containers:
        - name: visits-cases-stats
          image: <docker_username>/visits-cases-stats
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: visits-cases-stats-srv
spec:
  selector:
    app: visits-cases-stats
  ports:
    - name: db
      protocol: TCP
      port: 3000
      targetPort: 3000
