infra/k8s/visits-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits
  template:
    metadata:
      labels:
        app: visits
    spec:
      containers:
        - name: visits
          image: <docker_username>/visits
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: visits-srv
spec:
  selector:
    app: visits
  ports:
    - name: db
      protocol: TCP
      port: 3000
      targetPort: 3000
